--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -2,63 +2,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="./css/style.css">
 
-    <script src="./jS/loaded_images.js"></script>
-    
 
-    <style>
-        .offcanvaselement {
-            margin-top: 2%;
-            margin-right: 5%;
-            margin-bottom: 5%;
-            box-shadow: 5px 5px 5px grey;
-            border-radius: 4px;
-        }
+   <script src="./js/loaded_images.js"></script>
 
-        .offcanvasbtn {
-            position: fixed;
-            right: 1%;
-            cursor: pointer;
-            background-color: #EDEDED;
-            border: 0px solid grey;
-            border-radius: 4px;
-            height: 40px;
-            width: 40px;
-        }
 
-        .offcanvasicon {
-            -webkit-text-stroke: 0.8px;
-        }
+   <style>
+      .offcanvaselement {
+         margin-top: 2%;
+         margin-right: 5%;
+         margin-bottom: 5%;
+         box-shadow: 5px 5px 5px grey;
+         border-radius: 4px;
+      }
 
-        input {
-            width: 100%;
-        }
-    </style>
+      .offcanvasbtn {
+         position: fixed;
+         right: 1%;
+         cursor: pointer;
+         background-color: #EDEDED;
+         border: 0px solid grey;
+         border-radius: 4px;
+         height: 40px;
+         width: 40px;
+      }
+
+      .offcanvasicon {
+         -webkit-text-stroke: 0.8px;
+      }
+
+      input {
+         width: 100%;
+      }
+   </style>
 </head>
 
 
 <body>
-    <div id="pannelcreate">
+   <div id="pannelcreate">
 
-    </div>
+   </div>
 
-    <!-- <button  class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">Open Right Panel</button> -->
+   <!-- <button  class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">Open Right Panel</button> -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <script src="./js/geomerty.js"></script>
 <script src="./js/scene.js"></script>
@@ -67,16 +67,10 @@
 <script src="./js/common.js"></script>
 <script src="./js/activity1.js"></script>
 <script src="./js/activity3.js"></script>
+<script src="./js/activity3_1.js"></script>
 <script src="./js/activity4.js"></script>
 <script src="./js/activity5.js"></script>
 <script src="./js/activity6.js"></script>
 
 
 </html>
-
-
-
-
-
-
-
